--- a/research/stitch_calculadora_fleischner_2017/calculadora_fleischner_2017/code.html
+++ b/research/stitch_calculadora_fleischner_2017/calculadora_fleischner_2017/code.html
@@ -58,7 +58,7 @@
 <body class="bg-background-light dark:bg-background-dark font-display text-slate-900 dark:text-slate-100 min-h-screen flex flex-col">
 <!-- Top Navigation Bar -->
 <header class="sticky top-0 z-50 bg-background-light dark:bg-background-dark/95 backdrop-blur-md border-b border-slate-200 dark:border-slate-800">
-<div class="flex items-center p-4 justify-between max-w-md mx-auto w-full">
+<div class="flex items-center p-4 justify-between max-w-md md:max-w-2xl lg:max-w-4xl mx-auto w-full">
 <div class="flex size-10 items-center justify-center rounded-full hover:bg-slate-100 dark:hover:bg-slate-800 transition-colors cursor-pointer">
 <span class="material-symbols-outlined text-2xl">arrow_back_ios_new</span>
 </div>
@@ -68,7 +68,7 @@
 </div>
 </div>
 </header>
-<main class="flex-1 max-w-md mx-auto w-full p-4 space-y-6 pb-32 overflow-y-auto hide-scrollbar">
+<main class="flex-1 max-w-md md:max-w-2xl lg:max-w-4xl mx-auto w-full p-4 md:p-6 lg:p-8 space-y-6 md:space-y-8 pb-32 md:pb-8 overflow-y-auto hide-scrollbar">
 <!-- Nodule Morphology Section -->
 <section class="space-y-3">
 <div class="flex items-center gap-2 px-1">
@@ -126,7 +126,7 @@
 </div>
 <span class="material-symbols-outlined text-slate-400 text-lg cursor-help">help_outline</span>
 </div>
-<div class="grid grid-cols-2 gap-3">
+<div class="grid grid-cols-2 md:grid-cols-4 gap-3 md:gap-4">
 <label class="relative block cursor-pointer">
 <input checked="" class="peer hidden" name="risk_level" type="radio" value="low"/>
 <div class="flex flex-col items-center justify-center p-4 rounded-2xl border-2 border-transparent bg-slate-100 dark:bg-card-dark transition-all peer-checked:border-primary peer-checked:bg-primary/5 dark:peer-checked:bg-primary/10">
@@ -164,9 +164,9 @@
         </p>
 </main>
 <!-- Fixed Bottom Action Area -->
-<footer class="fixed bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-background-light dark:from-background-dark via-background-light dark:via-background-dark to-transparent">
-<div class="max-w-md mx-auto">
-<button class="w-full bg-primary hover:bg-accent-teal text-white py-4 rounded-2xl font-bold text-lg shadow-xl shadow-primary/20 transition-all flex items-center justify-center gap-3 active:scale-[0.98]">
+<footer class="fixed bottom-0 left-0 right-0 p-4 md:relative md:mt-8 bg-gradient-to-t from-background-light dark:from-background-dark via-background-light dark:via-background-dark to-transparent md:bg-none">
+<div class="max-w-md md:max-w-2xl lg:max-w-4xl mx-auto">
+<button class="w-full md:w-auto md:px-12 bg-primary hover:bg-accent-teal text-white py-4 rounded-2xl font-bold text-lg shadow-xl shadow-primary/20 transition-all flex items-center justify-center gap-3 active:scale-[0.98] md:mx-auto">
 <span class="material-symbols-outlined">calculate</span>
                 Calcular Recomendación
             </button>
