--- a/research/stitch_calculadora_fleischner_2017/resultado_y_recomendación/code.html
+++ b/research/stitch_calculadora_fleischner_2017/resultado_y_recomendación/code.html
@@ -43,7 +43,7 @@
 <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-white min-h-screen flex flex-col">
 <!-- Top Navigation Bar -->
 <header class="sticky top-0 z-50 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md border-b border-slate-200 dark:border-slate-800">
-<div class="flex items-center p-4 justify-between max-w-md mx-auto w-full">
+<div class="flex items-center p-4 justify-between max-w-md md:max-w-3xl lg:max-w-4xl mx-auto w-full">
 <div class="flex items-center gap-2">
 <span class="material-symbols-outlined text-primary cursor-pointer">arrow_back_ios</span>
 <h2 class="text-lg font-bold leading-tight tracking-tight">Resultado</h2>
@@ -55,13 +55,13 @@
 </div>
 </div>
 </header>
-<main class="flex-1 max-w-md mx-auto w-full px-4 py-6 space-y-6">
+<main class="flex-1 max-w-md md:max-w-3xl lg:max-w-4xl mx-auto w-full px-4 md:px-6 lg:px-8 py-6 md:py-10 space-y-6 md:space-y-8">
 <!-- Hero Result Section -->
 <section class="text-center space-y-2">
 <div class="inline-flex items-center justify-center px-3 py-1 rounded-full bg-primary/10 text-primary text-xs font-bold uppercase tracking-wider mb-2">
                 Categoría Lung-RADS® v2022
             </div>
-<h1 class="text-4xl font-extrabold tracking-tight dark:text-white">Lung-RADS 3</h1>
+<h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold tracking-tight dark:text-white">Lung-RADS 3</h1>
 <p class="text-accent-teal text-lg font-medium">Probablemente Benigno</p>
 </section>
 <!-- Main Recommendation Card -->
@@ -89,7 +89,7 @@
 <h3 class="text-sm font-bold uppercase tracking-widest text-slate-500 dark:text-slate-400">Detalles Clínicos</h3>
 <span class="material-symbols-outlined text-sm text-slate-400">info</span>
 </div>
-<div class="grid grid-cols-1 gap-3">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 md:gap-4">
 <div class="bg-slate-50 dark:bg-surface-dark p-4 rounded-lg flex items-center justify-between border border-slate-100 dark:border-slate-800">
 <div class="flex items-center gap-3">
 <span class="material-symbols-outlined text-primary">straighten</span>
@@ -139,13 +139,13 @@
 <div class="h-24"></div> <!-- Spacer for fixed footer -->
 </main>
 <!-- Bottom Action Bar -->
-<footer class="fixed bottom-0 left-0 right-0 bg-background-light dark:bg-background-dark border-t border-slate-200 dark:border-slate-800 p-4 pb-8">
-<div class="max-w-md mx-auto grid grid-cols-2 gap-4">
-<button class="flex items-center justify-center gap-2 h-14 rounded-xl border-2 border-slate-200 dark:border-slate-700 text-slate-700 dark:text-slate-300 font-bold transition-all active:scale-95">
+<footer class="fixed bottom-0 left-0 right-0 md:relative md:mt-8 bg-background-light dark:bg-background-dark border-t border-slate-200 dark:border-slate-800 md:border-t-0 p-4 pb-8 md:pb-4">
+<div class="max-w-md md:max-w-3xl lg:max-w-4xl mx-auto grid grid-cols-2 md:flex md:justify-center gap-4">
+<button class="flex items-center justify-center gap-2 h-14 md:px-8 rounded-xl border-2 border-slate-200 dark:border-slate-700 text-slate-700 dark:text-slate-300 font-bold transition-all active:scale-95">
 <span class="material-symbols-outlined">restart_alt</span>
                 Reiniciar
             </button>
-<button class="flex items-center justify-center gap-2 h-14 rounded-xl bg-primary text-white font-bold shadow-lg shadow-primary/30 transition-all active:scale-95">
+<button class="flex items-center justify-center gap-2 h-14 md:px-8 rounded-xl bg-primary text-white font-bold shadow-lg shadow-primary/30 transition-all active:scale-95">
 <span class="material-symbols-outlined">save</span>
                 Guardar
             </button>
